2018-07-31

        * Version 1.6.0 released
        ========================

        Add ARC WCS projection (#2541)
        Add GLog::buffer() method.
        Renamed GPhoton::mcid() to GPhoton::mc_id()
        Remove at() methods from Python interface (#2515)
        Support application specific system parameter files (#2513)
        Add methods and operators to handle additional columns in GPha 
        Made GApplicationPar::query() method public
        Fix handling of q-mode parameters (#2495)
        Speed up computation of diffuse map models for CTA (#2466)
        Enhance GModelSpatialRadialProfileGauss class (#2463)
        Increase integration precision for CTA diffuse model response (#2458)
        Add GModelSpectralExponential class (#2454)
        Add GCTAModelRadialAcceptance model component setter methods
        Handle observation-specific energy thresholds in CTA On/Off analysis (#2429)
        Add GCTAEdisp::prob_erecobin() method (#2422)
        Add gammalib::gauss_integral() function (#2422)
        Keep existing library path in installation script on Mac OS X (#2420)
        Make GPha, GArf and GRmf output files XSPEC compliant (#2404)
        Add methods to store file attributes in GPha (#2404)
        CTA 3D background model now supports "BKG" column names (#2343)
        Compute likelihood values also if there are no model parameters (#2312)
        Add GSkyDir::cos_dist() method (#2309)
        Add GCTABackground::rate_ebin() method and gammalib::atan2() and
          gammalib::plaw_integral() functions (#2308)
        Handle extended models in CTA On/Off analysis (#2292)
        Preserve GTIs when copying GCTAEventList and GCTAEventCube objects (#2054)
        Use MJD reference of first observation for exposure cube (#2054)
        Implement Python pickeling support (#1938)


2018-04-26

        * Bug fix version 1.5.2 released
        ================================
