@@ -85,6 +85,7 @@ The following methods have been added:
 - GCTAEdispPerfTable::prob_erecobin()
 - GCTAEdispRmf::prob_erecobin()
 - GCTAEdisp2D::prob_erecobin()
+- GCTAResponseTable::telescope()
 - GCTAModelAeffBackground(GModelSpectral&, GModelTemporal&)
 - GCTAModelCubeBackground(GModelSpectral&, GModelTemporal&)
 - GCTAModelRadialAcceptance(GCTAModelRadial&, GModelSpectral&, GModelTemporal&)
